Added Home banner

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -87,6 +87,10 @@ p{
   text-decoration: none;
   font-weight: 500;
 
+  svg{
+    margin-left: 10px;
+  }
+
   &.dark-btn{
     background-color: $id-gray;
     color: $id-white;
