--- a/src/styles.scss
+++ b/src/styles.scss
@@ -118,4 +118,16 @@ p{
       }
     }
   }
+  &.text-btn{
+    color: $id-gray;
+    svg{
+      color: $id-gold;
+    }
+    &:hover{
+      color: $id-gold;
+      svg{
+        color: $id-gray;
+      }
+    }
+  }
 }
