--- a/src/styles.scss
+++ b/src/styles.scss
@@ -130,4 +130,20 @@ p{
       }
     }
   }
+  &.img-btn{
+    padding: 0;
+    svg{
+      width: 40px;
+      height: 40px;
+    }
+    &.gold{
+      svg{
+        color: $id-gold;
+        &:hover{
+          color: $id-gold-lg;
+
+        }
+      }
+    }
+  }
 }
